test/arrays/reshape/reshapeBlockError.good
reshapeBlockError.chpl:6: error: This array type does not support reshaping
reshapeBlockError.chpl:7: error: This array type does not support reshaping
reshapeBlockError.chpl:8: error: This array type does not support reshaping
reshapeBlockError.chpl:11: error: This array cannot be reshaped using this domain type
